--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       body {
         font-family: 'Nunito', sans-serif;
         background-color: #f8fafc;
+        margin: 0;
       }
 
       .font-handwriting {
@@ -61,14 +62,13 @@
         .exercise-block {
             break-inside: avoid;
             page-break-inside: avoid;
-            margin-bottom: 6rem; /* Verhoogd voor meer witruimte tussen blokken */
+            margin-bottom: 6rem; /* De gevraagde ruimte tussen blokken */
             border-radius: 1.5rem;
             border: 1px solid #cbd5e1;
-            padding: 2.5rem; /* Iets meer binnenruimte voor balans */
+            padding: 2.5rem;
             background-color: #ffffff;
         }
 
-        /* School-style schrijflijnen */
         .writing-line {
             border-bottom: 1px solid #94a3b8;
             height: 2.5rem;
@@ -81,7 +81,6 @@
             display: inline-block;
         }
 
-        /* Voorkom dat titels onderaan de pagina staan */
         h3 {
             break-after: avoid;
         }
@@ -90,12 +89,12 @@
   <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
     "@google/genai": "https://esm.sh/@google/genai@^1.35.0",
+    "react": "https://esm.sh/react@^19.2.3",
+    "react/": "https://esm.sh/react@^19.2.3/",
     "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
   }
 }
 </script>
